--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
-            <img src="Brown%20and%20Blue%20Illustrative%20Coffee%20Shop%20Logo_20250619_121819_0000.png" alt="Silver Garden Cafeteria" class="logo">
+            <img src="logo.png" alt="Silver Garden Cafeteria" class="logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
