--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
-                    <img src="Brown%20and%20Blue%20Illustrative%20Coffee%20Shop%20Logo_20250619_121819_0000.png" alt="Logo" class="footer-logo" style="border-radius: 100px 100px 100px 100px; height:200px;width: 200px;">
+                    <img src="logo.png" alt="Logo" class="footer-logo" style="border-radius: 100px 100px 100px 100px; height:200px;width: 200px;">
                     <h2>Silver Garden Cafeteria</h2>
                     <span></span>
                     <div class="social-links">
