--- a/about.html
+++ b/about.html
@@ -626,14 +626,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
-            <img src="Brown%20and%20Blue%20Illustrative%20Coffee%20Shop%20Logo_20250619_121819_0000.png" alt="Silver Garden Cafeteria" class="logo">
+            <img src="logo.png" alt="Silver Garden Cafeteria" class="logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="web2.html" id="home-link">Home</a>
+                        <a class="nav-link" href="/" id="home-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#menu" id="menu-link">Menu</a>
