--- a/about.html
+++ b/about.html
@@ -633,7 +633,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/" id="home-link">Home</a>
+                        <a class="nav-link" href="silver-garden/" id="home-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#menu" id="menu-link">Menu</a>
