--- a/about.html
+++ b/about.html
@@ -636,7 +636,7 @@
                         <a class="nav-link" href="index.html" id="home-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#menu" id="menu-link">Menu</a>
+                        <a class="nav-link" href="#menu/index.html" id="menu-link">Menu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
