--- a/about.html
+++ b/about.html
@@ -144,7 +144,8 @@
             transition: all 0.3s ease;
             margin-bottom: 30px;
             background-color: white;
-            height: 100%;
+            height: 100px;
+            width:200px;
             text-align: center;
             padding: 30px 20px;
         }
