--- a/about.html
+++ b/about.html
@@ -144,8 +144,7 @@
             transition: all 0.3s ease;
             margin-bottom: 30px;
             background-color: white;
-            height: 100px;
-            width:200px;
+            height: 100%;
             text-align: center;
             padding: 30px 20px;
         }
