--- a/services.html
+++ b/services.html
@@ -115,6 +115,8 @@
             transition: all 0.3s ease;
             margin-bottom: 30px;
             border: none;
+            height:300px;
+            width:300px
         }
         
         .service-card:hover {
