--- a/services.html
+++ b/services.html
@@ -577,7 +577,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h3>Fine Dining</h3>
-                            <p>Experience our exquisite fine dining service with carefully crafted menus and impeccable service in an elegant atmosphere.</p>
+                            <p>Experience our fine dining service with carefully crafted menus and service in an elegant atmosphere.</p>
                             <a href="" class="btn btn-service">Explore</a>
                         </div>
                     </div>
@@ -590,7 +590,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h3>Special Events</h3>
-                            <p>Host your memorable events with our premium catering services, from weddings to corporate gatherings.</p>
+                            <p>Host your memorable events with our catering services, from weddings to corporate gatherings.</p>
                             <a href="" class="btn btn-service">Learn More</a>
                         </div>
                     </div>
@@ -603,7 +603,7 @@
                         </div>
                         <div class="card-body text-center">
                             <h3>Coffee Experience</h3>
-                            <p>Discover our artisanal coffee selection, expertly brewed by our trained baristas using premium beans.</p>
+                            <p>Discover our artisanal coffee selection, expertly brewed by our trained baristas using beans.</p>
                             <a href="" class="btn btn-service">View Menu</a>
                         </div>
                     </div>
