--- a/services.html
+++ b/services.html
@@ -536,7 +536,7 @@
                         <a class="nav-link" href="index.html" id="home-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="" id="menu-link">Menu</a>
+                        <a class="nav-link" href="index.html#menu" id="menu-link">Menu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
