--- a/contact.html
+++ b/contact.html
@@ -716,17 +716,17 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
-            <img src="Brown%20and%20Blue%20Illustrative%20Coffee%20Shop%20Logo_20250619_121819_0000.png" alt="Silver Garden Cafeteria" class="logo">
+            <img src="logo.png" alt="Silver Garden Cafeteria" class="logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="web2.html" id="home-link">Home</a>
+                        <a class="nav-link" href="index.html" id="home-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#menu" id="menu-link">Menu</a>
+                        <a class="nav-link" href="index.html#menu" id="menu-link">Menu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
@@ -907,7 +907,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
-                    <img src="Brown%20and%20Blue%20Illustrative%20Coffee%20Shop%20Logo_20250619_121819_0000.png" alt="Logo" class="footer-logo" style="border-radius: 100px 100px 100px 100px; height:200px;width: 200px;">
+                    <img src="logo.png" alt="Logo" class="footer-logo" style="border-radius: 100px 100px 100px 100px; height:200px;width: 200px;">
                     <h2>Silver Garden Cafeteria</h2>
                     <span></span>
                     <div class="social-links">
