--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://via.placeholder.com/100x100?text=Logo" alt="Silver Garden Cafeteria" class="logo">
+                <img src="logo.png" alt="Silver Garden Cafeteria" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -765,16 +765,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="home-link">Home</a>
+                        <a class="nav-link" href="index.html" id="home-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#menu" id="menu-link">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About Us</a>
+                        <a class="nav-link" href="about.html">About Us</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="services.html">Our Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item cart-icon">
                         <a class="nav-link" href="#" id="cart-link">
@@ -951,10 +954,11 @@
                 <div class="col-lg-2 col-md-6">
                     <h5>Quick Links</h5>
                     <ul class="footer-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#about">About Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="#menu">Menu</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
                 
