--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
-                    <img src="https://via.placeholder.com/100x100?text=Logo" alt="Logo" class="footer-logo">
+                    <img src="logo.png" alt="Logo" class="footer-logo">
                     <h3>Silver Garden Cafeteria</h3>
                     <p>Premium coffee and beverages crafted with passion in the heart of Malout.</p>
                     <div class="social-links">
