--- a/index.html
+++ b/index.html
@@ -998,8 +998,8 @@
             </div>
             
             <div class="copyright">
-                <p>&copy; 2023 Silver Garden Cafeteria. All Rights Reserved | Designed with <i class="fas fa-heart" style="color: #e25555;"></i> in Malout</p>
-            </div>
+                <marquee><p>&copy; 2023 Silver Garden Cafeteria. All Rights Reserved | Designed with <i class="fas fa-heart" style="color: #e25555;"></i> in Malout</p>
+                </marquee>   </div>
         </div>
     </footer>
     
