--- a/about.html
+++ b/about.html
@@ -670,7 +670,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://images.unsplash.com/photo-1514432324607-a09d9b4aefdd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Silver Garden Cafeteria" class="logo">
+                <img src="logo.png" alt="Silver Garden Cafeteria" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -678,10 +678,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index2.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index2.html#menu">Menu</a>
+                        <a class="nav-link" href="index.html#menu">Menu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="about.html">About Us</a>
@@ -846,7 +846,7 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
-                    <img src="https://images.unsplash.com/photo-1514432324607-a09d9b4aefdd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Logo" class="footer-logo">
+                    <img src="logo.png" alt="Logo" class="footer-logo">
                     <h3>Silver Garden Cafeteria</h3>
                     <p>Premium coffee and beverages crafted with passion in the heart of Malout.</p>
                     <div class="social-links">
