--- a/contact.html
+++ b/contact.html
@@ -848,7 +848,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="Brown%20and%20Blue%20Illustrative%20Coffee%20Shop%20Logo_20250619_121819_0000.png" alt="Silver Garden Cafeteria" class="logo">
+                <img src="logo.png" alt="Silver Garden Cafeteria" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -856,7 +856,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="web2.html" id="home-link">Home</a>
+                        <a class="nav-link" href="index.html" id="home-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#menu" id="menu-link">Menu</a>
@@ -1040,7 +1040,7 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
-                    <img src="Brown%20and%20Blue%20Illustrative%20Coffee%20Shop%20Logo_20250619_121819_0000.png" alt="Logo" class="footer-logo">
+                    <img src="logo.png" alt="Logo" class="footer-logo">
                     <h3>Silver Garden Cafeteria</h3>
                     <p class="text-white mt-2">Where every cup tells a story</p>
                     <div class="social-links">
@@ -1053,7 +1053,7 @@
                 <div class="col-lg-2 col-md-6">
                     <h5>Quick Links</h5>
                     <ul class="footer-links">
-                        <li><a href="web2.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="#menu">Menu</a></li>
                         <li><a href="services.html">Our Services</a></li>
