--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,8 @@
         
         .logo {
             height: 60px;
+            border-radius: 50%;
             transition: all 0.3s ease;
-            width: 80px;
-            border-radius: 60px;
         }
         
         .navbar-brand img:hover {
