--- a/contact.html
+++ b/contact.html
@@ -458,10 +458,6 @@
             .section-title h2 {
                 font-size: 2.2rem;
             }
-            .nav-link {
-                font-size: 15px;
-                margin: 0 6px;
-            }
         }
         
         @media (max-width: 768px) {
@@ -549,8 +545,8 @@
                 font-size: 15px;
             }
             .nav-link {
-                font-size: 14px;
-                margin: 0 5px;
+                font-size: 0.95rem;
+                padding: 0.5rem 0;
             }
             
             .form-control {
